<resources>
    <string name="your_name">Qual seu nome?</string>
    <string name="text_user">Usuário</string>
    <string name="text_hello_user">Olá</string>
    <string name="text_conclusion_user">Então</string>
    <string name="button_save">Salvar</string>
    <string name="text_lets_begin">Vamos começar?</string>
    <string name="validation_life_risk">Por favor, selecione um item do menu e siga em frente</string>
    <string name="company_name"><b>HEART RISK</b></string>
    <string name="text_content_actions">Preencha o formulário escolhendo a alternativa que mais se
        aproxime da sua realidade. Sua idade por favor:</string>
    <string name="app_name">Avaliação de Risco Cardíaco</string>
    <string name="radio_age_option1">10 a 20 anos</string>
    <string name="radio_age_option2">21 a 30 anos</string>
    <string name="radio_age_option3">31 a 40 anos</string>
    <string name="radio_age_option4">41 a 50 anos</string>
    <string name="radio_age_option5">51 a 60 anos</string>
    <string name="radio_age_option6">Acima de 61 anos</string>
    <string name="text_selection_value">0</string>
    <string name="button_next">próximo</string>
    <string name="text_gender_content">Seu sexo por favor:</string>
    <string name="radio_gender_option1">Femenino c/ menos de 40 anos</string>
    <string name="radio_gender_option2">Femenino de 40 a 50 anos</string>
    <string name="radio_gender_option3">Femenino c/ mais de 50 anos</string>
    <string name="radio_gender_option4">Masculino</string>
    <string name="radio_gender_option5">Masculino de baixa estatura</string>
    <string name="radio_gender_option6">Maculino de baixa estatura e calvo</string>
    <string name="text_weight_content">Seu peso por favor:</string>
    <string name="radio_weight_option1">Inferior a 2,3Kg do peso normal</string>
    <string name="radio_weight_option2">Menos de 2,3Kg a mais de 2,3Kg do peso normal</string>
    <string name="radio_weight_option3">De 2,4 a 9,0Kg acima do peso normal</string>
    <string name="radio_weight_option4">De 9,1 a 15,9Kg acima do peso normal</string>
    <string name="radio_weight_option5">De 16 a 22,9Kg acima do peso normal</string>
    <string name="radio_weight_option6">Mais de 23Kg acima do peso normal</string>
    <string name="text_smoker_content">Você é fumante:</string>
    <string name="radio_smoker_option1">Não fumante</string>
    <string name="radio_smoker_option2">Charuto e/ou cachimbo</string>
    <string name="radio_smoker_option3">10 cigarros ou menos por dia</string>
    <string name="radio_smoker_option4">11 a 20 cigarros por dia</string>
    <string name="radio_smoker_option5">21 a 30 cigarros por dia</string>
    <string name="radio_smoker_option6">Mais de 31 cigarros por dia</string>
    <string name="text_physical_content">Sua atividade física regular por favor:</string>
    <string name="radio_physical_option1">Esforço profissional e recreativo intenso</string>
    <string name="radio_physical_option2">Esforço profissional e recreativo moderado</string>
    <string name="radio_physical_option3">Trabalho sedentário e esforço recreativo intenso</string>
    <string name="radio_physical_option4">Trabalho sedentário e esforço recreativo moderado</string>
    <string name="radio_physical_option5">Trabalho sedentário e esforço recreativo leve</string>
    <string name="radio_physical_option6">Ausência completa de qualquer exercício</string>
    <string name="text_illnesses_in_the_family_content">Histórico de doença cardíaca na família:</string>
    <string name="radio_illnesses_in_the_family_option1">Nenhuma história conhecida de cardiopatia</string>
    <string name="radio_illnesses_in_the_family_option2">1 parente c/ doença cardiaca e mais de 60 anos</string>
    <string name="radio_illnesses_in_the_family_option3">2 parentes c/ doença cardiaca e mais de 60 anos</string>
    <string name="radio_illnesses_in_the_family_option4">1 parente c/ doença cardiaca e menos de 60 anos</string>
    <string name="radio_illnesses_in_the_family_option5">2 parente c/ doença cardiaca e menos de 60 anos</string>
    <string name="radio_illnesses_in_the_family_option6">3 parente c/ doença cardiaca e menos de 60 anos</string>
    <string name="text_cholesterol_content">A média do seu colesterol por favor:</string>
    <string name="radio_cholesterol_option1">Abaixo de 180 ou a dieta não contém gorduras animais</string>
    <string name="radio_cholesterol_option2">De 181 a 205 ou a dieta contém 10% de gorduras animais</string>
    <string name="radio_cholesterol_option3">De 206 a 230 ou a dieta contém 20% de gorduras animais</string>
    <string name="radio_cholesterol_option4">De 231 a 255 ou a dieta contém 30% de gorduras animais</string>
    <string name="radio_cholesterol_option5">De 256 a 280 ou a dieta contém 40% de gorduras animais</string>
    <string name="radio_cholesterol_option6">Acima de 281 ou a dieta contém 50% de gorduras animais</string>
    <string name="text_blood_pressure_content">A média de sua pressão arterial:</string>
    <string name="radio_blood_pressure_option1">Sistólica de 100 a 119 mmHg</string>
    <string name="radio_blood_pressure_option2">Sistólica de 120 a 139 mmHg</string>
    <string name="radio_blood_pressure_option3">Sistólica de 140 a 159 mmHg</string>
    <string name="radio_blood_pressure_option4">Sistólica de 160 a 179 mmHg</string>
    <string name="radio_blood_pressure_option5">Sistólica de 180 a 199 mmHg</string>
    <string name="radio_blood_pressure_option6">Sistólica de 200 mmHg ou mais</string>
    <string name="text_result_content">Seu resultado é:</string>
    <string name="text_result1">1 - Sem risco - de 6 a 11</string>
    <string name="text_result2">2 - Risco abaixo da média - de 12 a 17</string>
    <string name="text_result3">3 - Risco médio - de 18 a 24</string>
    <string name="text_result4">4 - Risco moderado - de 25 a 31</string>
    <string name="text_result5">5 - Risco alto - de 32 a 40</string>
    <string name="text_result6">6 - Risco muito alto - 41 a 62</string>
    <string name="text_final_content">Esta avaliação tem o objetivo de estimar seu risco cardíaco, não substituindo uma avaliação médica. Caso o resultado apresente algum risco, aconselhamos que procure um médico para aconselhamento. Lembre-se que a prevenção e o diagnostico precoce podem salvar sua vida.</string>
    <string name="button_back_to_initial">voltar ao inicio</string>
    <string name="button_finalize_app">finalizar</string>
</resources>