<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.BloodPressureActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:fontFamily="@font/cabin"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cabin"
        android:text="@string/text_blood_pressure_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        android:layout_marginTop="32dp">

        <RadioButton
            android:id="@+id/radio_1"
            android:textSize="18sp"
            android:fontFamily="@font/cabin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_blood_pressure_option1"/>

        <RadioButton
            android:id="@+id/radio_2"
            android:textSize="18sp"
            android:fontFamily="@font/cabin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_blood_pressure_option2"/>

        <RadioButton
            android:id="@+id/radio_3"
            android:textSize="18sp"
            android:fontFamily="@font/cabin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_blood_pressure_option3"/>

        <RadioButton
            android:id="@+id/radio_4"
            android:textSize="18sp"
            android:fontFamily="@font/cabin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_blood_pressure_option4"/>

        <RadioButton
            android:id="@+id/radio_5"
            android:textSize="18sp"
            android:fontFamily="@font/cabin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_blood_pressure_option5"/>

        <RadioButton
            android:id="@+id/radio_6"
            android:textSize="18sp"
            android:fontFamily="@font/cabin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_blood_pressure_option6"/>
    </RadioGroup>

    <TextView
        android:id="@+id/text_chosen_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_selection_value"
        android:textSize="48sp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/text_chosen_radio_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>