<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="16dp"
    tools:context=".ui.UserActivity">

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/cabin"
        android:layout_centerHorizontal="true"
        android:textSize="38sp"
        android:text="@string/company_name"/>

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/cabin"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:layout_below="@+id/company"
        android:text="teste o seu!"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/cabin"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_below="@+id/slogan"
        android:paddingTop="64dp"
        android:text="@string/text_lets_begin"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:fontFamily="@font/cabin"
        android:hint="@string/your_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/button_save"/>
</RelativeLayout>